fix header alignment

--- a/demo/static/demoblog.css
+++ b/demo/static/demoblog.css
@@ -8,7 +8,7 @@ body {
   margin: 10px;
 }
 
-div#banner {
+div#nuclblog-banner {
   top: 0px;
   text-align: right;
 }
